# scribe

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVICE-SPECS.md  DOCS.MD  FLASH.md  LESSONS_LEARNED.md  LICENSE  MERGE.md  PROMPT.md  README.md  SECURITY.md  SPECS.md  TODO.md  diagram.json  partitions.csv  sdkconfig.defaults  sdkconfig.wokwi  wokwi.toml
.codex/skills/doc-maintainer/: SKILL.md
.codex/skills/feature-workflow/: SKILL.md
.codex/skills/release-runbook/: SKILL.md
.codex/skills/todo-github/: SKILL.md
.github/workflows/: host-tests.yml
M5Tab5-UserDemo/: README.md
assets/strings/: en.json
components/scribe_editor/: CMakeLists.txt  editor_core.cpp  editor_core.h  piece_table.cpp  piece_table.h  selection.cpp  selection.h  undo_stack.cpp  undo_stack.h  word_count.cpp
components/scribe_export/: CMakeLists.txt  export_sd.cpp  export_sd.h  send_to_computer.cpp  send_to_computer.h  usb_hid_device.cpp  usb_hid_device.h  usb_msc_device.cpp  usb_msc_device.h
components/scribe_hw/: CMakeLists.txt  tab5_i2c.cpp  tab5_i2c.h  tab5_ina226.cpp  tab5_ina226.h  tab5_io_expander.cpp  tab5_io_expander.h  tab5_rx8130.cpp  tab5_rx8130.h
components/scribe_input/: CMakeLists.txt  key_event.cpp  key_event.h  keybinding.cpp  keybinding.h  keyboard_host.cpp  keyboard_host.h  keyboard_host_control.cpp  keyboard_host_control.h  keymap.cpp  keymap.h  space_hold_detector.cpp  space_hold_detector.h
components/scribe_secrets/: CMakeLists.txt  secrets_nvs.cpp  secrets_nvs.h
components/scribe_services/: CMakeLists.txt  ai_assist.cpp  ai_assist.h  audio_feedback.cpp  audio_feedback.h  audio_manager.cpp  audio_manager.h  battery.cpp  battery.h  env_importer.cpp  env_importer.h  github_backup.cpp  github_backup.h  imu_manager.cpp  imu_manager.h  power_manager.cpp  power_manager.h  rtc_time.cpp  rtc_time.h  wifi_manager.cpp  wifi_manager.h
components/scribe_storage/: CMakeLists.txt  autosave.cpp  autosave.h  project_library.cpp  project_library.h  recovery.cpp  recovery.h  session_state.cpp  session_state.h  settings_store.cpp  settings_store.h  storage_manager.cpp  storage_manager.h
components/scribe_ui/: CMakeLists.txt  Kconfig  display_driver.cpp  display_driver.h  mipi_dsi_display.cpp  mipi_dsi_display.h  touch_controller.cpp  touch_controller.h  touch_gt911.cpp  touch_gt911.h  touch_st7123.cpp  touch_st7123.h  ui_app.cpp  ui_app.h
components/scribe_ui/theme/: fonts.cpp  theme.cpp  theme.h
components/scribe_ui/ui_screens/: dialog_power_off.cpp  dialog_power_off.h  screen_advanced.cpp  screen_advanced.h  screen_ai.cpp  screen_ai.h  screen_ai_prompt.cpp  screen_ai_prompt.h  screen_backup.cpp  screen_backup.h  screen_diagnostics.cpp  screen_diagnostics.h  screen_editor.cpp  screen_editor.h  screen_export.cpp  screen_export.h  screen_find.cpp  screen_find.h  screen_first_run.cpp  screen_first_run.h  screen_help.cpp  screen_help.h  screen_magic_bar.cpp  screen_magic_bar.h  screen_menu.cpp  screen_menu.h  screen_new_project.cpp  screen_new_project.h  screen_projects.cpp  screen_projects.h  screen_recovery.cpp  screen_recovery.h  screen_settings.cpp  screen_settings.h  screen_storage.cpp  screen_storage.h  screen_usb_storage.cpp  screen_usb_storage.h  screen_wifi.cpp  screen_wifi.h
components/scribe_ui/widgets/: hud_overlay.cpp  hud_overlay.h  text_view.cpp  text_view.h  toast.cpp  toast.h
components/scribe_utils/: CMakeLists.txt  string_utils.h  strings.cpp  strings.h
components/sensor_bmi270/: CMakeLists.txt
components/sensor_bmi270/src/: accel_gyro_bmi270.c
main/: CMakeLists.txt  app_build_info.h  app_event.h  app_main.cpp  app_queue.cpp  app_queue.h  idf_component.yml
test/: CMakeLists.txt  Makefile  test_editor_core.cpp  test_piece_table.cpp  test_undo_stack.cpp
tools/: generate_editor_fonts.ps1
