idf_component_register(SRCS
    "ui_app.cpp"
    "display_driver.cpp"
    "mipi_dsi_display.cpp"
    "touch_gt911.cpp"
    "touch_st7123.cpp"
    "touch_controller.cpp"
    "theme/theme.cpp"
    "widgets/text_view.cpp"
    "widgets/toast.cpp"
    "widgets/hud_overlay.cpp"
    "ui_screens/screen_editor.cpp"
    "ui_screens/screen_projects.cpp"
    "ui_screens/screen_menu.cpp"
    "ui_screens/screen_export.cpp"
    "ui_screens/screen_settings.cpp"
    "ui_screens/screen_help.cpp"
    "ui_screens/screen_recovery.cpp"
    "ui_screens/screen_new_project.cpp"
    "ui_screens/screen_find.cpp"
    "ui_screens/screen_first_run.cpp"
    "ui_screens/screen_diagnostics.cpp"
    "ui_screens/screen_advanced.cpp"
    "ui_screens/screen_wifi.cpp"
    "ui_screens/screen_backup.cpp"
    "ui_screens/screen_ai.cpp"
    "ui_screens/screen_magic_bar.cpp"
    "ui_screens/dialog_power_off.cpp"
    INCLUDE_DIRS "."
    REQUIRES
        lvgl
        esp_driver_gpio
        esp_driver_ledc
        esp_driver_spi
        esp_hw_support
        esp_lcd
        esp_lcd_touch_gt911
        esp_lcd_touch_st7123
        esp_lvgl_port
        m5stack-tab5
        scribe_input
        scribe_editor
        scribe_storage
        scribe_services
        scribe_utils
        scribe_hw
        spi_flash
)
